Fixed Sommerville reference typo

--- a/parts/bibliography.adoc
+++ b/parts/bibliography.adoc
@@ -2,4 +2,4 @@
 == References
 
 * [[[BM22,1]]] Bertrand Meyer. _Handbook of Requirements and Business Analysis_. Springer. 2022.
-* [[[RE97,2]]] Ian Sommerville and Peter Sawyer. _Rerquirements Engineering: A good Practice Guide_. Wiley. 1997.
+* [[[RE97,2]]] Ian Sommerville and Peter Sawyer. _Requirements Engineering: A good Practice Guide_. Wiley. 1997.
