--- a/parts/environment/E6.adoc
+++ b/parts/environment/E6.adoc
@@ -2,7 +2,7 @@
 === (E.6) Invariants
 
 ifdef::env-draft[]
-TIP: _Properties of the environment that the system's operation must preserve, i.e., properties of the environment that operations of the system may assume to hold when they start, and must maintain_  <<BM22>>
+TIP: _Properties of the environment that the system's operation must preserve, i.e., properties of the environment that operations of the system may assume to hold when they start, and must maintain._  <<BM22>>
 endif::[]
 
 {emptysec}
